# rust-practice

./: README.md  README.md.backup  setup_trials.sh
.devcontainer /: devcontainer.json
docs/: 01_setup.md  02_variables.md
exercises/02_variables/: Cargo.toml  README.md
exercises/02_variables/src/: main.rs
hello_rust/src/: main.rs
trials/02_variables/: .gitignore  Cargo.toml  README.md
